# aos2-save-editor

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flake.nix
.github/workflows/: bump.yaml  ci.yaml  release.yaml  rust-ci.yaml
aos2-env/: Cargo.toml
aos2-env/src/: lib.rs
crates/aos2-env/: Cargo.toml
crates/aos2-env/src/: lib.rs
crates/binary-file/: Cargo.toml
crates/binary-file/src/: lib.rs
crates/easydiff/: Cargo.toml  README.md
crates/easydiff/src/: main.rs  path.rs
crates/easydiff/src/diff/: byte.rs  difference.rs  file.rs  size.rs
crates/enum-array/: Cargo.toml
crates/enum-array/src/: lib.rs  unit_enum_members.rs
crates/online-profile/: Cargo.toml
crates/online-profile/examples/: info.rs
crates/online-profile/src/: ascii_text.rs  lib.rs  sized_section.rs  text_field.rs  unlocks.rs  version.rs
crates/online-profile/src/avatar/: background.rs  character.rs
crates/online-profile/src/online/: mod.rs
crates/online-profile/src/online/title/: color.rs
crates/online-profile/src/text/: ascii_text.rs  lobby_name.rs  lobby_password.rs  mod.rs  nickname.rs
crates/online-profile/src/title/: character.rs  color.rs  text.rs
crates/online-profile/test_inputs/: player-generic-0.rkg  player-generic-1.rkg  player-generic-2.rkg
crates/player-progress/: Cargo.toml
crates/player-progress/examples/: unlock-everything.rs
crates/player-progress/src/: arenas.rs  lib.rs  lock.rs  music.rs  playable_characters.rs  runs.rs  wins.rs  xor_encoding.rs  xor_encryption.rs
crates/player-progress/src/characters/: full.rs  mod.rs
crates/savefile/src/: bin_bool.rs  lib.rs  lock.rs
crates/savefile/src/local/: arenas.rs  mod.rs  music.rs
crates/savefile/src/local/characters/: mod.rs  runs.rs
crates/savefile/src/online/: version.rs
crates/savefile/src/online/avatar/: background.rs
crates/savefile/test_inputs/: game-fresh.sys
docs/: 02-cracking-wins.md  architecture-and-design.md
easydiff/: Cargo.toml  README.md
easydiff/src/: diff.rs  hexy.rs  main.rs  path.rs
easydiff/src/diff/: file.rs  mod.rs
examples/: limbo.rs  raw-binary-game-sys.rs
nix/: aos2-save-editor.nix
savefile/: Cargo.toml
savefile/src/: bin_bool.rs  binary.rs  lib.rs  sized_section.rs  xor_encoding.rs
savefile/src/file/: binary.rs  mod.rs
savefile/src/file/game/: mod.rs
savefile/src/file/game/background/: image.rs  music.rs
savefile/src/file/game/characters/: full.rs  mod.rs  story.rs
savefile/src/file/local/: mod.rs
savefile/src/file/local/background/: image.rs  music.rs
savefile/src/file/local/characters/: full.rs  story.rs
savefile/src/file/online/: mod.rs
savefile/src/file/online/title/: color.rs  mod.rs
savefile/src/file/player/: mod.rs
savefile/src/file/player/avatar/: mod.rs
savefile/src/file/player/title/: mod.rs
savefile/src/local/: mod.rs
savefile/src/local/background/: image.rs  mod.rs  music.rs
savefile/src/local/characters/: full.rs  mod.rs  story.rs
savefile/src/online/: mod.rs
savefile/src/online/avatar/: character.rs  mod.rs
savefile/src/online/title/: character.rs  color.rs  mod.rs  text.rs
savefile/src/xor_encoding/: bool.rs  key.rs  mod.rs  u32.rs  u8.rs
savefile/test_inputs/: game-completionist.sys
src/: app.rs  collection.rs  keyboard.rs  lib.rs  main.rs  settings.rs  signal.rs  tui.rs
src/app/: mod.rs
src/app/component/: full_help_toggle.rs  mod.rs  title_header.rs
src/binary_file/: mod.rs  savefile.rs  sized_section.rs
src/binary_file/game/: byte.rs  encoded_bool.rs  encoded_u32.rs  encoded_u8.rs  mod.rs  wins_amount.rs
src/binary_file/game/encoded/: u8.rs
src/binary_file/player/: mod.rs
src/collection/: hovering_index.rs  mod.rs  radio_button_array.rs  selectable_array.rs  selectible_array.rs  slice.rs  text_search.rs
src/component/: content_window.rs  full_help_toggle.rs  mod.rs
src/component/tab/: character.rs  empty.rs  mod.rs  unlockables.rs
src/component/tab/unlockables/: background.rs  backgrounds.rs  mod.rs  music.rs  style.rs
src/editor/: info.rs  mod.rs
src/editor/content_window/: mod.rs  tabs.rs
src/editor/info/: mod.rs
src/editor/info/content_window/: mod.rs
src/editor/profile/: avatar.rs  mod.rs  title.rs  widget.rs
src/editor/profile/table/: generic.rs
src/editor/progress/: mod.rs
src/editor/progress/tables/: generic.rs  mod.rs
src/editor/progress/widget/: table.rs
src/editor/statistics/: character_stats.rs  mod.rs
src/info/: content_window.rs  full_help_toggle.rs  mod.rs  title_header.rs
src/info/content_window/: mod.rs  tabs.rs
src/limbo/: mod.rs
src/player/: bin_bool.rs  mod.rs  sized_section.rs  sized_string.rs
src/player/avatar/: background.rs  character.rs
src/player/title/: character.rs  mod.rs
src/player/v_a1_05_00_00/: mod.rs  version.rs
src/profile/: avatar.rs  collection.rs  mod.rs  title.rs  widget.rs
src/profile/table/: collection.rs  color.rs  generic.rs  mod.rs  title_character.rs  title_color.rs
src/profile/title/: mod.rs
src/progress/: mod.rs
src/progress/tables/: arena.rs  character.rs  generic.rs  mod.rs  music.rs
src/progress/widget/: mod.rs  status.rs  table.rs
src/savefile/: channel.rs  mod.rs  profile.rs  progress.rs
src/statistics/: character_stats.rs  match_stats.rs  mod.rs
src/style/: color.rs  mod.rs  selection.rs
src/tab/: character.rs  mod.rs
src/tab/progress/: mod.rs
src/tab/progress/tables/: arena.rs  character.rs  dummy.rs  mod.rs  music.rs
src/tab/progress/widget/: mod.rs  status.rs  table.rs
src/tab/statistics/: character_stats.rs  games.rs  mod.rs  table.rs
src/tab/unlockables/: backgrounds.rs  mod.rs  music.rs  style.rs
src/tui/: event.rs  mod.rs
src/widget/: black_box.rs  content_box.rs  default_text.rs  evenly_spaced_tabs.rs  horizontal_separator.rs  mod.rs  separated_sequence.rs  separator.rs  sequence.rs  split.rs  status_cell.rs  status_toggle.rs  toggles_table.rs
