[workspace]
members = ["crates/*"]
default-members = ["."]

[workspace.package]
version = "0.1.0"
edition = "2021"
# hall of shame lol.
authors = ["DOCtorActoAntohich"]

[workspace.dependencies]
thiserror = "1"
anyhow = "1"
derive_more = { version = "1", features = ["full"] }
envy = "0.4"
serde = "1"
binrw = "0.14"
clap = { version = "4" }
rstest = "0.22"
rstest_reuse = "0.7"
ratatui = "0.29"
tokio = "1"

[package]
name = "aos2-save-editor"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
aos2-env = { path = "./crates/aos2-env" }
savefile = { path = "./crates/savefile" }
anyhow.workspace = true
derive_more.workspace = true
ratatui.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
rstest.workspace = true
rstest_reuse.workspace = true
