[workspace]
members = ["crates/*"]
default-members = ["."]

[workspace.package]
version = "1.0.0"
edition = "2024"
# hall of shame lol.
authors = ["DOCtorActoAntohich"]
repository = "https://github.com/DOCtorActoAntohich/aos2-save-editor"
license = "MIT"
rust-version = "1.86"

[workspace.dependencies]
thiserror = "1"
anyhow = "1"
derive_more = { version = "1", features = ["full"] }
envy = "0.4"
serde = "1"
binrw = "0.14"
clap = { version = "4" }
rstest = "0.22"
rstest_reuse = "0.7"
ratatui = "0.29"
tokio = "1"
winresource = "0.1"
syn = "2"
quote = "1"
proc-macro2 = "1"

[package]
name = "aos2-save-editor"
description = "The editor app for AoS2 game saves"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aos2-env = { path = "./crates/aos2-env" }
online-profile = { path = "./crates/online-profile" }
player-progress = { path = "./crates/player-progress" }
anyhow.workspace = true
thiserror.workspace = true
derive_more.workspace = true
ratatui.workspace = true
tokio = { workspace = true, features = ["sync"] }
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
rstest.workspace = true
rstest_reuse.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource.workspace = true
