[package]
name = "easydiff"
description = "Basic binary file difference"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aos2-env = { path = "../aos2-env" }
anyhow.workspace = true
thiserror.workspace = true
clap = { workspace = true, features = ["derive"] }
derive_more.workspace = true
