[package]
name = "online-profile"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
aos2-env = { path = "../aos2-env" }
anyhow.workspace = true
thiserror.workspace = true
binrw.workspace = true
derive_more.workspace = true
strum = { workspace = true, features = ["derive"] }

[dev-dependencies]
rstest.workspace = true
rstest_reuse.workspace = true
