[package]
name = "online-profile"
description = "Player Online Profile parsing - avatars, titles, and personal settings"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aos2-env.path = "../aos2-env"
binary-file.path = "../binary-file"
enum-array.path = "../enum-array"
thiserror.workspace = true
binrw.workspace = true
derive_more.workspace = true

[dev-dependencies]
anyhow.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
