[package]
name = "player-progress"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
aos2-env.path = "../aos2-env"
enum-array.path = "../enum-array"
anyhow.workspace = true
thiserror.workspace = true
derive_more.workspace = true
binrw.workspace = true

[dev-dependencies]
rstest.workspace = true
rstest_reuse.workspace = true
