[package]
name = "player-progress"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
aos2-env.path = "../aos2-env"
enum-array.path = "../enum-array"
thiserror.workspace = true
derive_more.workspace = true
binrw.workspace = true

[dev-dependencies]
anyhow.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
